# LearnOpenGL_CLion

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Practice/Chpt1/: 1-1window.cpp  1-2triangle.cpp
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb/: CMakeLists.txt
